# graph-complexity-reduction-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: demo.py  main.py
src/application/: dto.py  experiment_service.py
src/domain/: graph_model.py
src/domain/metrics/: apsp.py  avg_path.py  avg_stretch.py  base.py  clustering.py  community_preservation.py  connectivity.py  degree_distribution.py  diameter.py  edge_density.py  effective_resistance.py  registry.py  spectral_similarity.py
src/domain/sparsifiers/: identity_stub.py  k_neighbor.py  local_degree.py  merw.py  pagerank.py  random.py  registry.py
src/domain/transforms/: base.py  merw_coarsening.py  mock_coarsening.py
src/infrastructure/: graph_gateway.py
src/interfaces/: api.py  cli.py  reporter.py  smoke.py  visualizer.py
src/tests/: test_smoke.py
unused/: sample_script.py
